--- a/css/adams.css
+++ b/css/adams.css
@@ -28,3 +28,13 @@ h1 {
   background-color: #f5f5f5;
 }
 
+#footer-simple {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding-top: 10px; 
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background-color: #f5f5f5;
+}
+
